# qpipe

./: .dockerignore  .gitignore  Dockerfile  FRIEND_SETUP.md  README.md  docker-compose.yml  pyproject.toml
configs/: creative_green_bat.yaml  etf_rotation.yaml  sma_cross.yaml  sp10_edgar.yaml  sp10_momentum.yaml  sp10_pit.yaml  spy_top_2_momentum.yaml
data/: generate_universe_qc.py  universe_top10.json
qpipe/: __init__.py  analysis.py  cli.py  config.py  mcp_server.py  papertrade.py
qpipe/backtest/: equity_tracker.py  fees.py  runner.py
qpipe/data/: alpaca_loader.py  autofetch.py  catalog.py  edgar.py  lean_converter.py  synthetic.py  universe_builder.py
qpipe/optimize/: engine.py  report.py  walkforward.py  windows.py
qpipe/strategies/: creative_green_bat.py  etf_rotation.py  sma_cross.py
qpipe/web/: app.py  claude_agent.py  logbuf.py
qpipe/web/static/: index.html
