[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qpipe"
version = "0.1.0"
description = "Self-hosted quant model pipeline: randomized IS/OOS optimization on NautilusTrader"
requires-python = ">=3.11"
dependencies = [
    "nautilus_trader>=1.220.0",
    "optuna>=3.6",
    "pandas>=2.0",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "alpaca-py>=0.21",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "mcp>=1.9",
    "yfinance>=0.2.40",
    "anthropic>=0.40",
    "openai>=1.40",
]

[tool.setuptools.package-data]
qpipe = ["web/static/*"]

[project.scripts]
qpipe = "qpipe.cli:main"

[tool.setuptools.packages.find]
include = ["qpipe*"]
